[tool.poetry]
name = "tether-bridge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tether_bridge"}]

[tool.poetry.dependencies]
python = "^3.11"
ecdsa = "^0.18.0"
crypto = "^1.4.1"
base58 = "^2.1.1"
pycryptodome = "^3.19.0"
tronpy = "^0.4.0"
orjson = "^3.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
